<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingHorizontal="15dp"
    android:weightSum="5"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1_cat"
        android:textSize="32sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:layout_weight="0.1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="5dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="0dp"
                >
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:src="@mipmap/ic_burger_foreground"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/layer1_burger"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    />
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            >
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="0dp"
                >

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:src="@mipmap/ic_drink_foreground"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/layer1_drink"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    />
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            >
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="0dp"
                >
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:src="@mipmap/ic_pizza_foreground"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/layer1_pizza"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    />
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Popular Now -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2_pop"
        android:textSize="32sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:layout_weight="0.1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:orientation="horizontal"
        >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarSize="5dp"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="VisualLintBounds">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardElevation="12dp"
                    app:cardCornerRadius="20dp"
                    >
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="15dp"
                            android:src="@mipmap/ic_beefburger_foreground"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="120dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_1_beefburger"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="150dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_2_beefburger"
                            android:textSize="23sp"
                            android:alpha="0.6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="190dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_3_beefburger"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardElevation="12dp"
                    app:cardCornerRadius="20dp"
                    >
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="15dp"
                            android:src="@mipmap/ic_pizza_fruit_foreground"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="120dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_1_pizzafruit"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="150dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_2_pizzafruit"
                            android:textSize="23sp"
                            android:alpha="0.6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="190dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_3_pizzafruit"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardElevation="12dp"
                    app:cardCornerRadius="20dp"
                    >
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="15dp"
                            android:src="@mipmap/ic_sandwich_foreground"
                            tools:ignore="ContentDescription,VisualLintBounds" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="120dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_1_sandwich"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="150dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_2_sandwich"
                            android:textSize="23sp"
                            android:alpha="0.6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="190dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_3_sandwich"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <!-- 1clone-->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardElevation="12dp"
                    app:cardCornerRadius="20dp"
                    tools:ignore="VisualLintBounds">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="15dp"
                            android:src="@mipmap/ic_beefburger_foreground"
                            tools:ignore="ContentDescription,VisualLintBounds" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="120dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_1_beefburger"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="150dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_2_beefburger"
                            android:textSize="23sp"
                            android:alpha="0.6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="190dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/layer2_3_beefburger"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>